[package]
name = "ripgrep-fuzz"
version = "0.0.0"
publish = false
edition = "2018"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.grep]
path = "../crates/grep"

[dependencies.ripgrep]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "search_reader"
path = "fuzz_targets/search_reader.rs"
test = false
doc = false
